shape factor todo

--- a/MarkAnalyzer/mainwindow.ui
+++ b/MarkAnalyzer/mainwindow.ui
@@ -27,7 +27,7 @@
        </size>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -145,6 +145,13 @@
             </item>
            </layout>
           </widget>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pushButton_5">
+          <property name="text">
+           <string>Рассчитать все признаки</string>
+          </property>
          </widget>
         </item>
         <item>
